wayland: Fix handling of unminimization for not fully initialized xdg-toplevels

If setMinimized(false) is called for a not fully initialized
XdgToplevelWindow, we don't want to emit the windowShown signal.

BUG: 479234